[tool.poetry]
name = "adventofcode2022"
version = "1.0.0"
description = "My Python solution to the *Advent of Code 2022* challenges"
authors = ["Alexander Görtz <alex@nyloc.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.8"
anytree = "^2.8.0"
graphviz = "^0.20.1"
numpy = "^1.23.5"
networkx = "^2.8.8"
matplotlib = "^3.6.2"
ipython = "^8.7.0"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
